updateMenuSupplier
